# pyproject.toml

[build-system]
requires = [
    "setuptools",
    "wheel",
    "requests",
    "pyopenssl",
    "jwcrypto"
]
build-backend = "setuptools.build_meta"

[project]
name = "aduneoclientfedid"
version = "2.0.2"
description = "Identity Federation Test Client"
readme = "README.md"
authors = [{ name = "Aduneo", email = "contact@aduneo.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]
keywords = ["identity", "federation", "openid connect", "oidc", "oauth", "oauth 2", "saml", "cas"]
dependencies = [
    "requests",
    "jwcrypto",
    "pyopenssl",
]
requires-python = ">=3.6"

[project.optional-dependencies]
saml = ["xmlsec"]

[project.urls]
homepage = "https://www.aduneo.com"
repository = "https://github.com/Aduneo/aduneoclientfedid"

[project.scripts]
clientfedid = "aduneoclientfedid.__main__:main"
aduneoclientfedid = "aduneoclientfedid.__main__:main"
