# pyproject.toml

[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "aduneoclientfedid"
version = "2.0.11"
description = "Identity Federation Test Client"
readme = "README.md"
authors = [{ name = "Aduneo", email = "contact@aduneo.com" }]
license = "Apache-2.0"
classifiers = [
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]
keywords = ["identity", "federation", "openid connect", "oidc", "oauth", "oauth 2", "saml", "cas", "sso"]
dependencies = [
    "urllib3",
    "jwcrypto",
    "pyopenssl",
]
requires-python = ">=3.6"

[project.optional-dependencies]
saml = ["xmlsec"]

[project.urls]
homepage = "https://www.aduneo.com"
repository = "https://github.com/Aduneo/aduneoclientfedid"

[project.scripts]
clientfedid = "aduneoclientfedid.__main__:main"
aduneoclientfedid = "aduneoclientfedid.__main__:main"
